Add 4 SmartHome instructor solution variations